--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
       "module": "ESNext",
       "lib": ["ESNext", "DOM"],
       "moduleResolution": "Node",
-      "strict": true,
+      "allowJs": true,
+      "checkJs": true,
+      "types": ["@types/pixi.js"],
+      "typeRoots": ["./node_modules/@types", "./types"],
+      "strict": false,
       "resolveJsonModule": true,
       "isolatedModules": true,
       "esModuleInterop": true,
@@ -15,5 +19,5 @@
       "noImplicitReturns": true,
       "skipLibCheck": true
     },
-    "include": ["src"]
+    "include": ["modules/**/*.js", "modules/**/*.ts", "types/globals.d.ts"]
   }
